src/styles/globals.css
:root {
    color-scheme: dark light;
    prefers-color-scheme: dark;
    --green-color: #66b193;
    --purple-colour: #1b1325;
    --blue-color: #3e8497;
    --red-color: #ff4d4d;
    --dark-gray-color:#212529;
    --gray-color: #343a40;
    --selection-color: var(--green-color);
}

.dev * {
    border: solid red 1px;
}

/*html,*/
body {
    padding: 0;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    background: var(--color-bg-primary);
    color: var(--color-text-primary);
    transition: background 0.25s ease-in-out;
    -ms-overflow-style: none;
    scrollbar-width: none;
    text-align: center;
}

body, body[data-theme="light"] {
    --color-text-primary: var(--dark-gray-color);
    --color-text-secondary: var(--green-color);
    --color-bg-primary: #fff;
    --color-bg-secondary: #fff;
}

body[data-theme="dark"] {
    --color-text-primary: #e3e3e3;
    --color-text-secondary: var(--green-color);
    --color-bg-primary: var(--dark-gray-color);
    --color-bg-secondary: var(--gray-color);
}

body::-webkit-scrollbar {
    display: none;
}

::selection {
    background: var(--selection-color);
}

::-moz-selection {
    background: var(--selection-color);
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: var(--selection-color);
}

.avatar {
    max-height: 20px;
    border-radius: 50%;
    margin: 0 20px 0 20px;
}

.socials {
    font-size: 24px;
    letter-spacing: .4em;
}

.card {
    background-color: var(--color-bg-secondary);
}

.card p {
    color: var(--color-text-primary);
}

